--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "qrcode": "^1.5.4",
+    "sharp": "^0.33.5",
     "uuid": "^11.1.0"
   }
 }
