--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
   "port": 3000,
-  "uploadPassword": "admin",
-  "adminPassword": "yuan1234",
+  "uploadPassword": "your_upload_password",
+  "adminPassword": "your_admin_password",
   "maxFileSize": "100mb",
   "allowedFileTypes": ["image/jpeg", "image/png", "image/gif", "application/pdf"],
   "cleanupInterval": "7d",
